# zeer

./: .env.example  .gitignore  BEFORE_AFTER_UI.md  Dockerfile.telegram  EXECUTION_MODES.md  LICENSE  MANIFEST.in  OLLAMA_SETUP.md  README.md  README_TELEGRAM.md  SETUP_COMMAND_GUIDE.md  SETUP_COMMAND_SUMMARY.md  SKILLS_IMPLEMENTATION.md  STREAMING_IMPLEMENTATION.md  TELEGRAM_AUTO_START.md  TELEGRAM_INTEGRATION_SUMMARY.md  TELEGRAM_QUICKSTART.md  TELEGRAM_SETUP.md  TELEGRAM_TROUBLESHOOTING.md  TELEGRAM_VISUAL_GUIDE.md  TOOL_DISPLAY_IMPROVEMENTS.md  UI_IMPROVEMENTS.md  UI_UPDATE_SUMMARY.md  docker-compose.telegram.yml  install_telegram.bat  install_telegram.sh  pyproject.toml  start_telegram_bot.py  test_code_display.py  test_gemini_code_format.py  test_gemini_models.py  test_image_generation.py  test_image_generation_skill.py  test_multi_language.py  test_normal_code.py  test_telegram_setup.py  test_ui_display.py  zeer-telegram.service
skills/: QUALITY_STANDARDS.md  README.md  __init__.py
skills/analyzing-time-series/: SKILL.md
skills/code-helper/: SKILL.md  __init__.py
skills/file-operations/: SKILL.md  __init__.py
skills/frontend-design/: SKILL.md  __init__.py
skills/generating-practice-questions/: SKILL.md
skills/image-generation/: README.md  SKILL.md  __init__.py
skills/pdf/: SKILL.md  __init__.py
skills/pptx/: SKILL.md  __init__.py
skills/text-processing/: SKILL.md  __init__.py
skills/webapp-testing/: SKILL.md  __init__.py
src/: __init__.py  app_controller.py  chat_session.py  cli_interface.py  config.py  error_handler.py  image_handler.py  main.py  messaging_platforms.py  model_manager.py  process_manager.py  provider_base.py  session.py  session_storage.py  skills_manager.py  telegram_bot.py  tool_display.py  tools.py  validation.py
src/providers/: __init__.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
(+3 files in other folders)
